Address code review: fix S3Client ownership, use AtomicLong for tmp names
Co-authored-by: balchua <28750768+balchua@users.noreply.github.com>